# backend/server.ts
@@ -2,14 +2,20 @@ import cors from "cors";
 import type { NextFunction, Request, Response } from "express";
 import express from "express";
 import * as OpenApiValidator from "express-openapi-validator";
+import fs from "fs";
 import path from "path";
 import booksRouter from "./api/books.js";
 import moviesRouter from "./api/movies.js";
 import tvRouter from "./api/tv.js";
+import { components } from "./types/api.js";
+import { KeyfileData } from "./types/server.js";
 
 const app = express();
 const __dirname = path.resolve();
 const PORT = process.env.PORT || 3000;
+const keyfilePath = "../config/keyfile.json";
+
+type KeysNeededResponse = components["schemas"]["KeysNeeded"];
 
 app.use(express.json());
 app.use(
@@ -22,6 +28,48 @@ app.use(
 app.use("/books", booksRouter);
 app.use("/movies", moviesRouter);
 app.use("/tv", tvRouter);
+
+app.get("/setup", async (req, res) => {
+  const keysNeededResponse: KeysNeededResponse = { keysNeeded: [] };
+  if (fs.existsSync(keyfilePath)) {
+    fs.readFile(keyfilePath, (err, data) => {
+      if (err) {
+        res.sendStatus(500);
+        console.log("Failed to read file: " + keyfilePath);
+        throw err;
+      }
+      const keyfileData = JSON.parse(data.toString()) as KeyfileData;
+
+      !keyfileData.notionDatabaseId
+        ? keysNeededResponse.keysNeeded?.push("NOTION_DATABASE_ID")
+        : null;
+      !keyfileData.notionIntegrationToken
+        ? keysNeededResponse.keysNeeded?.push("NOTION_INTEGRATION_TOKEN")
+        : null;
+      !keyfileData.tmdbToken
+        ? keysNeededResponse.keysNeeded?.push("TMDB_TOKEN")
+        : null;
+
+      res.status(200).json(keysNeededResponse);
+    });
+  } else {
+    const keyfileData: KeyfileData = {
+      notionIntegrationToken: null,
+      notionDatabaseId: null,
+      tmdbToken: null,
+    };
+    fs.writeFile(keyfilePath, JSON.stringify(keyfileData), (err) => {
+      if (err) {
+        res.sendStatus(500);
+        console.log("Failed to write file: " + keyfilePath);
+        throw err;
+      } else {
+        console.log("Successfully wrote to file: " + keyfilePath);
+        res.send(200).json(keysNeededResponse);
+      }
+    });
+  }
+});
 
 app.use(
   OpenApiValidator.middleware({
@@ -41,7 +89,7 @@ app.use(
     _next: NextFunction
   ) => {
     // format error
-    console.log("SHIEEEEEEEEEEEEEEEEEEEEET");
+    console.log("Something went wrong");
     res.status(err.status || 500).json({
       message: err.message,
       errors: err.errors,
