# backend/types/server.ts
@@ -1,0 +1,5 @@
+export type KeyfileData = {
+  notionIntegrationToken: string | null;
+  notionDatabaseId: string | null;
+  tmdbToken: string | null;
+};
